implements halt management

--- a/arch/arm/configs/UDOO_defconfig
+++ b/arch/arm/configs/UDOO_defconfig
@@ -322,12 +322,12 @@ CONFIG_MACH_MX6_SECO_UDOO=y
 # MX6 Options:
 #
 CONFIG_Q7_SATA_AHCI=y
-CONFIG_Q7_MTD_M25P80=y
+# CONFIG_Q7_MTD_M25P80 is not set
 CONFIG_Q7_SND_SOC_IMX_AC97_VT1613=y
-CONFIG_Q7_TOUCHSCREEN_TSC2006=y
+# CONFIG_Q7_TOUCHSCREEN_TSC2006 is not set
 # CONFIG_Q7_TOUCHSCREEN_TSC2004 is not set
-CONFIG_Q7_MSP430=y
-CONFIG_Q7_PMIC_PFUZE100=y
+# CONFIG_Q7_MSP430 is not set
+# CONFIG_Q7_PMIC_PFUZE100 is not set
 # CONFIG_Q7_EMMC_INTERFACE is not set
 # CONFIG_Q7_SD1_INTERFACE is not set
 # CONFIG_Q7_SD2_INTERFACE is not set
@@ -336,6 +336,7 @@ CONFIG_Q7_PMIC_PFUZE100=y
 #
 # UDOO Option
 #
+# CONFIG_UDOO_DUAL_REVB is not set
 
 #
 # External i.MX6 Pinmuxing options
@@ -1831,6 +1832,9 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEOBUF_GEN=y
 CONFIG_VIDEOBUF_DMA_CONTIG=y
+CONFIG_VIDEOBUF2_CORE=y
+CONFIG_VIDEOBUF2_MEMOPS=y
+CONFIG_VIDEOBUF2_VMALLOC=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
@@ -1916,7 +1920,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 #
 # CONFIG_VIDEO_THS7303 is not set
 # CONFIG_VIDEO_M52790 is not set
-# CONFIG_VIDEO_VIVI is not set
+CONFIG_VIDEO_VIVI=y
 CONFIG_VIDEO_MXC_CAMERA=m
 
 #
@@ -1925,7 +1929,7 @@ CONFIG_VIDEO_MXC_CAMERA=m
 CONFIG_VIDEO_MXC_IPU_CAMERA=y
 # CONFIG_VIDEO_MXC_CSI_CAMERA is not set
 # CONFIG_MXC_CAMERA_MICRON111 is not set
-# CONFIG_MXC_CAMERA_OV2640 is not set
+CONFIG_MXC_CAMERA_OV2640=m
 CONFIG_MXC_CAMERA_OV3640=m
 CONFIG_MXC_CAMERA_OV5640=m
 CONFIG_MXC_CAMERA_OV8820_MIPI=m
@@ -2372,7 +2376,7 @@ CONFIG_USB_EHCI_ROOT_HUB_TT=y
 #
 # USB Device Class drivers
 #
-# CONFIG_USB_ACM is not set
+CONFIG_USB_ACM=m
 # CONFIG_USB_PRINTER is not set
 # CONFIG_USB_WDM is not set
 # CONFIG_USB_TMC is not set
@@ -2411,7 +2415,58 @@ CONFIG_USB_STORAGE=y
 #
 # USB port drivers
 #
-# CONFIG_USB_SERIAL is not set
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+# CONFIG_USB_EZUSB is not set
+CONFIG_USB_SERIAL_GENERIC=y
+# CONFIG_USB_SERIAL_AIRCABLE is not set
+# CONFIG_USB_SERIAL_ARK3116 is not set
+# CONFIG_USB_SERIAL_BELKIN is not set
+# CONFIG_USB_SERIAL_CH341 is not set
+# CONFIG_USB_SERIAL_WHITEHEAT is not set
+# CONFIG_USB_SERIAL_DIGI_ACCELEPORT is not set
+# CONFIG_USB_SERIAL_CP210X is not set
+# CONFIG_USB_SERIAL_CYPRESS_M8 is not set
+# CONFIG_USB_SERIAL_EMPEG is not set
+CONFIG_USB_SERIAL_FTDI_SIO=m
+# CONFIG_USB_SERIAL_FUNSOFT is not set
+# CONFIG_USB_SERIAL_VISOR is not set
+# CONFIG_USB_SERIAL_IPAQ is not set
+# CONFIG_USB_SERIAL_IR is not set
+# CONFIG_USB_SERIAL_EDGEPORT is not set
+# CONFIG_USB_SERIAL_EDGEPORT_TI is not set
+# CONFIG_USB_SERIAL_GARMIN is not set
+# CONFIG_USB_SERIAL_IPW is not set
+# CONFIG_USB_SERIAL_IUU is not set
+# CONFIG_USB_SERIAL_KEYSPAN_PDA is not set
+# CONFIG_USB_SERIAL_KEYSPAN is not set
+# CONFIG_USB_SERIAL_KLSI is not set
+# CONFIG_USB_SERIAL_KOBIL_SCT is not set
+# CONFIG_USB_SERIAL_MCT_U232 is not set
+# CONFIG_USB_SERIAL_MOS7720 is not set
+# CONFIG_USB_SERIAL_MOS7840 is not set
+# CONFIG_USB_SERIAL_MOTOROLA is not set
+# CONFIG_USB_SERIAL_NAVMAN is not set
+# CONFIG_USB_SERIAL_PL2303 is not set
+# CONFIG_USB_SERIAL_OTI6858 is not set
+# CONFIG_USB_SERIAL_QCAUX is not set
+# CONFIG_USB_SERIAL_QUALCOMM is not set
+# CONFIG_USB_SERIAL_SPCP8X5 is not set
+# CONFIG_USB_SERIAL_HP4X is not set
+# CONFIG_USB_SERIAL_SAFE is not set
+# CONFIG_USB_SERIAL_SIEMENS_MPI is not set
+# CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+# CONFIG_USB_SERIAL_SYMBOL is not set
+# CONFIG_USB_SERIAL_TI is not set
+# CONFIG_USB_SERIAL_CYBERJACK is not set
+# CONFIG_USB_SERIAL_XIRCOM is not set
+# CONFIG_USB_SERIAL_OPTION is not set
+# CONFIG_USB_SERIAL_OMNINET is not set
+# CONFIG_USB_SERIAL_OPTICON is not set
+# CONFIG_USB_SERIAL_VIVOPAY_SERIAL is not set
+# CONFIG_USB_SERIAL_ZIO is not set
+# CONFIG_USB_SERIAL_SSU100 is not set
+CONFIG_USB_SERIAL_DEBUG=y
 
 #
 # USB Miscellaneous drivers
@@ -2756,7 +2811,6 @@ CONFIG_MXC_MIPI_CSI2=y
 #
 # SECO_MXC_SYSTEM
 #
-CONFIG_MSP430=y
 
 #
 # File systems
