UDOO platform files fixing, system-halt management

--- a/arch/arm/configs/UDOO_defconfig
+++ b/arch/arm/configs/UDOO_defconfig
@@ -321,22 +321,13 @@ CONFIG_MACH_MX6_SECO_UDOO=y
 #
 # MX6 Options:
 #
-CONFIG_Q7_SATA_AHCI=y
-# CONFIG_Q7_MTD_M25P80 is not set
-CONFIG_Q7_SND_SOC_IMX_AC97_VT1613=y
-# CONFIG_Q7_TOUCHSCREEN_TSC2006 is not set
-# CONFIG_Q7_TOUCHSCREEN_TSC2004 is not set
-# CONFIG_Q7_MSP430 is not set
-# CONFIG_Q7_PMIC_PFUZE100 is not set
-# CONFIG_Q7_EMMC_INTERFACE is not set
-# CONFIG_Q7_SD1_INTERFACE is not set
-# CONFIG_Q7_SD2_INTERFACE is not set
-# CONFIG_Q7_SD3_INTERFACE is not set
 
 #
 # UDOO Option
 #
 # CONFIG_UDOO_DUAL_REVB is not set
+CONFIG_UDOO_SATA_AHCI=y
+CONFIG_UDOO_SND_SOC_IMX_AC97_VT1613=y
 
 #
 # External i.MX6 Pinmuxing options
@@ -345,6 +336,7 @@ CONFIG_Q7_SND_SOC_IMX_AC97_VT1613=y
 #
 # Testing...
 #
+# CONFIG_SPDIF_SUPPORT is not set
 CONFIG_IMX_PCIE=y
 CONFIG_USB_EHCI_ARC_H1=y
 CONFIG_USB_FSL_ARC_OTG=y
