patch for HDMI detect/EDID issues

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2400,6 +2400,22 @@ config FB_MXC_HDMI
 	help
 	  Driver for the on-chip MXC HDMI controller.
 
+config FORCE_HDMI_FIXED_EDID
+	depends on FB_MXC_HDMI
+	bool "Force EDID from external file"
+	help
+	  Force on-chip MXC HDMI controller to adopt EDID read
+	  from external file or static internal kernel table.  
+	  External file must be called /etc/edid.txt and contains
+	  edid data as you extract with command: 
+	  "i2cdump -f -y 1 0x50" (only data, not address or strings)
+
+config FORCE_HDMI_HP_DETECT
+	depends on FB_MXC_HDMI
+	bool "Force Hot Pug Detect on HDMI"
+	help
+	  Force the presence of an attached HDMI Panel Regardless
+	  of the signal present in hpdetect pin.
 
 if VT
 	source "drivers/video/console/Kconfig"
